# NitrAPI-Rust

./: .gitignore  Cargo.toml  flake.nix
src/: lib.rs  maintenance.rs  ping.rs  query_builder.rs  version.rs
